# AlterHuman-Dictionary

./: README.md  app.js  commands.js  dataparse.js  dictionary.xml  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: .gitignore  Cargo.toml  README.md  Trunk.toml  cspell.json  index.html  tailwind.config.js  tailwind.css
docs/images/: Web Image Links
docs/orig_for_ref/: age-and-breed.html  breeders.html  home.html  index.html  read-more.html  the-american-kennel-club.html
docs/orig_for_ref/css/: css576b.css  css8063.css  css9d62.css  rs=AGEqA5mRDe4vouBH3Iiihqy1CXgCTSCtXw.css
docs/src/: app.rs  main.rs  router.rs
docs/src/components/: expand_div.rs  footer.rs  header.rs  hero_image.rs  icon.rs  menu.rs  mod.rs
docs/src/pages/: mod.rs
docs/src/pages/homepage/: mod.rs
