[package]
name = "protect_the_puppy"
homepage = "https://www.protectthepuppy.com"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.37", features = ["serde"]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
log = "0.4"
wasm-logger = "0.2"
itertools = "0.12.1"
gloo-net = { version="0.5.0", features=["http", "json"]}
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
gloo-timers = "0.3.0"
gloo = "0.11.0"
lazy_static = "1.4.0"
web-sys = {version = "0.3.69", features=["InputEvent", "HtmlSelectElement", "Location", "Window"]}
futures = "0.3.30"
serde_json = "1.0.105"
strum = { version = "0.26.2", features = ["derive"] }
yewdux = "0.10.0"
validator = { version = "0.18.1", features = ["derive"] }